added db config

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,8 @@ test:
 production:
   adapter: postgresql
   encoding: utf8
-  database: <%= ENV['RDS_DB_NAME'] %>
-  username: <%= ENV['RDS_USERNAME'] %>
-  password: <%= ENV['RDS_PASSWORD'] %>
-  host: <%= ENV['RDS_HOSTNAME'] %>
-  port: <%= ENV['RDS_PORT'] %>
+  database: dev
+  username: rabdelazim
+  password: dinero#2
+  host: rabdelazim-pg.carshwwmte96.us-east-1.rds.amazonaws.com
+  port: 5432
